fix spacing

--- a/src/assets/styles/elements/_table.css
+++ b/src/assets/styles/elements/_table.css
@@ -12,13 +12,13 @@ th {
   line-height: 22px;
 
   vertical-align: middle;
-  padding: 7px 0;
+  padding: 7px 7px 7px 0;
 
 
   @media (--desktop) {
     font-size: 16px;
     line-height: 18px;
-    padding: 10px 0 var(--space-1);
+    padding: 10px 10px var(--space-1) 0;
   }
 }
 
